src/parser.c
#include "parser.h"
#include "error.h"
#include <stc/algorithm.h>

typedef enum {
    Advance,
    Open,
    Close,
    Skip,
} EventKind;

typedef struct {
    EventKind kind;
    CstNodeKind cstKind;
} Event;

#define i_TYPE EventVec, Event
#include <stc/vec.h>

typedef usize OpenIndex;
typedef usize ClosedIndex;

typedef struct {
    const Token *tokens;
    usize count;
    usize pos;
    u32 fuel;
    EventVec events;
    usize nodeCount;
    ParserErrorVec errors;
} Parser;

static OpenIndex openEvent(Parser *parser) {
    OpenIndex i = EventVec_size(&parser->events);
    EventVec_push(&parser->events, (Event){Open, CST_ERROR});
    return i;
}

static ClosedIndex closeEvent(Parser *parser, OpenIndex i, CstNodeKind cstKind) {
    parser->events.data[i].cstKind = cstKind;
    EventVec_push(&parser->events, (Event){Close, CST_ERROR});
    parser->nodeCount++;
    return i;
}

static OpenIndex openBeforeEvent(Parser *parser, ClosedIndex i) {
    EventVec_insert_n(&parser->events, i, &(Event){Open, CST_ERROR}, 1);
    return (OpenIndex)i;
}

static b32 eof(const Parser *parser) {
    return parser->tokens[parser->pos].kind == TOKEN_EOF;
}

static void advance(Parser *parser) {
    assert(!eof(parser));
    parser->fuel = 256;
    parser->pos++;
    parser->nodeCount++;
    EventVec_push(&parser->events, (Event){Advance, CST_ERROR});
}

static void skip(Parser *parser) {
    parser->nodeCount++;
    EventVec_push(&parser->events, (Event){Skip, CST_ERROR});
}

static TokenKind nth(Parser *parser, i32 n) {
    if (parser->fuel == 0) {
        panic("Parser is stuck");
    }
    parser->fuel--;
    if (parser->pos + n >= parser->count)
        return TOKEN_EOF;
    else
        return parser->tokens[parser->pos + n].kind;
}

static b32 at(Parser *parser, TokenKind kind) {
    return nth(parser, 0) == kind;
}

typedef u128 KindBitset;
#define KB(x) ((KindBitset)1 << (x))

static b32 at_any(Parser *parser, KindBitset kinds) {
    TokenKind kind = nth(parser, 0);
    return (kinds & KB(kind)) != 0;
}

static b32 eat(Parser *parser, TokenKind kind) {
    if (at(parser, kind)) {
        advance(parser);
        return true;
    } else {
        skip(parser);
        return false;
    }
}

static b32 expect(Parser *parser, TokenKind kind) {
    if (eat(parser, kind))
        return true;
    ParserErrorVec_push(
        &parser->errors,
        (ParserError){
            .kind = PARSER_ERROR_EXPECTED,
            .expected = kind,
            .got = &parser->tokens[parser->pos]});
    return false;
}

static void advanceWithError(Parser *parser, const char *error) {
    OpenIndex o = openEvent(parser);
    ParserErrorVec_push(
        &parser->errors,
        (ParserError){
            .kind = PARSER_ERROR_MSG,
            .msg = error,
            .got = &parser->tokens[parser->pos],
        });
    advance(parser);
    closeEvent(parser, o, CST_ERROR);
}

static void skipWithError(Parser *parser, const char *error) {
    OpenIndex o = openEvent(parser);
    ParserErrorVec_push(
        &parser->errors,
        (ParserError){
            .kind = PARSER_ERROR_MSG,
            .msg = error,
            .got = &parser->tokens[parser->pos],
        });
    closeEvent(parser, o, CST_ERROR);
}

typedef enum {
    RIGHT_TIGTER,
    LEFT_TIGTER,
    AMBIGUOUS
} BindingPrecedence;

static void parseProgram(Parser *p);
static void parseFnDef(Parser *p);
static void parseFnParamList(Parser *p);
static void parseFnParam(Parser *p);
static void parseFnModifierList(Parser *p);
static void parseFnModifier(Parser *p);
static void parseGivenModifier(Parser *p);
static void parseWithModifier(Parser *p);
static void parseImplicitClause(Parser *p);

static void parseBlock(Parser *p);
static void parseExprStmt(Parser *p);
static void parseLetStmt(Parser *p);
static void parseVarStmt(Parser *p);
static void parseWithStmt(Parser *p);
static void parseVarDef(Parser *p);
static void parseReturnStmt(Parser *p);
static void parseBreakStmt(Parser *p);
static void parseContinueStmt(Parser *p);

static void parseTypeExpr(Parser *p);
static void parseGenericParamName(Parser *p);
static void parseCustomTypeExpr(Parser *p);
static void parseGenericArgList(Parser *p);
static void parseFunctionTypeExpr(Parser *p);
static void parseFunctionSpec(Parser *p);
static void parseTupleTypeExpr(Parser *p);
static void parseTypeArg(Parser *p);

static void parseExpr(Parser *p);
static void parseBlockExpr(Parser *p);
static void parseBlocklessExpr(Parser *p);
static void parseIfExpr(Parser *p);
static void parseIfClause(Parser *p);
static void parseElseClause(Parser *p);
static void parseElseIfClause(Parser *p);
static void parseWhileExpr(Parser *p);
static void parseLoopExpr(Parser *p);
static void parseForExpr(Parser *p);

static ClosedIndex parseSimpleExpr(Parser *p);
static ClosedIndex parseDelimetedExpr(Parser *p);
static ClosedIndex parsePrattExpr(Parser *p, TokenKind left);
static BindingPrecedence bindingPrecedence(TokenKind left, TokenKind right);
static ClosedIndex parseDotOp(Parser *p, ClosedIndex lhs);
static ClosedIndex parseCallOp(Parser *p, ClosedIndex lhs);
static void parseArgList(Parser *p);
static void parseArg(Parser *p);
static ClosedIndex parseLambdaExpr(Parser *p);
static void parseLambdaParamList(Parser *p);
static void parseLambdaParam(Parser *p);
static ClosedIndex parseIndexOp(Parser *p, ClosedIndex lhs);

// Program(*) = Definition*[*!E]
// Definition :=
//   FnDef
// | StructDef (TODO)
// | EnumDef (TODO)
static void parseProgram(Parser *p) {
    OpenIndex o = openEvent(p);

    while (!eof(p)) {
        if (at(p, TOKEN_K_DEF))
            parseFnDef(p); // *
        else
            advanceWithError(p, "Expected a function definition");
    }

    closeEvent(p, o, CST_PROGRAM);
}

// FnDef(7) = 'def'[0!] 'IDENT'[1] FnParamList[2]
//            ('->'[3] TypeExpr[4E])?
//            FnModifierList?[5] Block[6]
static void parseFnDef(Parser *p) {
    assert(at(p, TOKEN_K_DEF));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_DEF); // 0
    expect(p, TOKEN_IDENT); // 1

    if (at(p, TOKEN_LPAREN))
        parseFnParamList(p); // 2
    else
        skip(p); // 2

    if (eat(p, TOKEN_ARROW)) // 3
        parseTypeExpr(p);    // 4
    else
        skip(p); // 4

    if (at(p, TOKEN_K_GIVEN))
        parseFnModifierList(p); // 5
    else
        skip(p); // 5

    if (at(p, TOKEN_LCURLY))
        parseBlock(p); // 6
    else
        skip(p); // 6

    closeEvent(p, o, CST_FN_DEF);
}

static const KindBitset FN_PARAM_LIST_RECOVERY =
    KB(TOKEN_ARROW) | KB(TOKEN_LCURLY) | KB(TOKEN_SEMI) |
    KB(TOKEN_K_IF) | KB(TOKEN_K_ELSE) | KB(TOKEN_K_LET) |
    KB(TOKEN_K_WHILE) | KB(TOKEN_K_FOR) | KB(TOKEN_K_DEF) |
    KB(TOKEN_K_RETURN) | KB(TOKEN_K_BREAK) | KB(TOKEN_K_CONTINUE);
// FnParamList(*) = '('[0!] FnParam*[*!E] ')'[?]
static void parseFnParamList(Parser *p) {
    assert(at(p, TOKEN_LPAREN));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_LPAREN); // 0
    while (!at(p, TOKEN_RPAREN) && !at(p, TOKEN_EOF)) {
        if (at(p, TOKEN_IDENT))
            parseFnParam(p); // *
        else {
            if (at_any(p, FN_PARAM_LIST_RECOVERY))
                break;
            advanceWithError(p, "Expected a function parameter");
        }
    }
    expect(p, TOKEN_RPAREN); // ?

    closeEvent(p, o, CST_FN_PARAM_LIST);
}

// FnParam(5) = 'IDENT'[0!] ':'[1] 'var'?[2] TypeExpr[3!E] ','?[4]
static void parseFnParam(Parser *p) {
    assert(at(p, TOKEN_IDENT));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_IDENT); // 0
    expect(p, TOKEN_COLON); // 1
    if (at(p, TOKEN_K_VAR))
        advance(p); // 2
    else
        skip(p); // 2

    parseTypeExpr(p); // 3
    if (!at(p, TOKEN_RPAREN))
        expect(p, TOKEN_COMMA); // 4
    else
        skip(p); // 4

    closeEvent(p, o, CST_FN_PARAM);
}

// FnModifierList(*) = FnModifier+[*!]
static void parseFnModifierList(Parser *p) {
    OpenIndex o = openEvent(p);

    do {
        parseFnModifier(p); // *
    } while (at(p, TOKEN_K_GIVEN) || at(p, TOKEN_K_WITH));

    closeEvent(p, o, CST_FN_MODIFIER_LIST);
}

// FnModifier := GivenModifier | WithModifier
static void parseFnModifier(Parser *p) {
    if (at(p, TOKEN_K_GIVEN))
        parseGivenModifier(p);
    else if (at(p, TOKEN_K_WITH))
        parseWithModifier(p);
    else
        assert(false);
}

static const KindBitset TYPE_EXPR_FIRST =
    KB(TOKEN_IDENT) | KB(TOKEN_PERCENT) | KB(TOKEN_LPAREN) |
    KB(TOKEN_K_FN) | KB(TOKEN_K_I8) | KB(TOKEN_K_I16) |
    KB(TOKEN_K_I32) | KB(TOKEN_K_I64) | KB(TOKEN_K_U8) |
    KB(TOKEN_K_U16) | KB(TOKEN_K_U32) | KB(TOKEN_K_U64) |
    KB(TOKEN_K_STR) | KB(TOKEN_K_CHAR) | KB(TOKEN_K_BOOL);

static const KindBitset EXPR_FIRST =
    KB(TOKEN_IDENT) | KB(TOKEN_DECIMAL) | KB(TOKEN_BINARY) |
    KB(TOKEN_STRING) | KB(TOKEN_CHAR) | KB(TOKEN_PIPE) |
    KB(TOKEN_PLUS) | KB(TOKEN_MINUS) | KB(TOKEN_K_NOT) |
    KB(TOKEN_K_IF) | KB(TOKEN_K_WHILE) | KB(TOKEN_K_LOOP) |
    KB(TOKEN_K_FOR);

static const KindBitset FN_MODIFIER_LIST_RECOVERY = FN_PARAM_LIST_RECOVERY;

// GivenModifier(*) = 'given'[0!] '('[1] ImplicitClause+[*!E] ')'[?]
static void
parseGivenModifier(Parser *p) {
    assert(at(p, TOKEN_K_GIVEN));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_GIVEN); // 0
    expect(p, TOKEN_LPAREN);  // 1
    while (!at(p, TOKEN_RPAREN) && !at(p, TOKEN_EOF)) {
        if (at(p, TOKEN_IDENT))
            parseImplicitClause(p); // *
        else {
            if (at_any(p, FN_MODIFIER_LIST_RECOVERY))
                break;
            advanceWithError(p, "Expected a type for the 'given' clause");
        }
    }
    expect(p, TOKEN_RPAREN); // ?

    closeEvent(p, o, CST_GIVEN_MODIFIER);
}

// WithModifier(*) = 'with'[0!] '('[1] ImplicitClause+[*!E] ')'[?]
static void parseWithModifier(Parser *p) {
    assert(at(p, TOKEN_K_WITH));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_WITH); // 0
    expect(p, TOKEN_LPAREN); // 1
    while (!at(p, TOKEN_RPAREN) && !at(p, TOKEN_EOF)) {
        if (at(p, TOKEN_IDENT))
            parseImplicitClause(p); // *
        else {
            if (at_any(p, FN_MODIFIER_LIST_RECOVERY))
                break;
            advanceWithError(p, "Expected a type for the 'with' clause");
        }
    }
    expect(p, TOKEN_RPAREN); // ?

    closeEvent(p, o, CST_WITH_MODIFIER);
}

// ImplicitClause(*) = ('IDENT'[0] ':'[1])? TypeExpr[2!E] ','?[3]
static void parseImplicitClause(Parser *p) {
    assert(at_any(p, TYPE_EXPR_FIRST));
    OpenIndex o = openEvent(p);

    if (at(p, TOKEN_IDENT) && nth(p, 1) == TOKEN_COLON) {
        expect(p, TOKEN_IDENT); // 0
        expect(p, TOKEN_COLON); // 1
    } else {
        skip(p); // 0
        skip(p); // 1
    }
    parseTypeExpr(p); // 2
    if (!at(p, TOKEN_RPAREN))
        expect(p, TOKEN_COMMA); // 3
    else
        skip(p); // 3

    closeEvent(p, o, CST_IMPLICIT_CLAUSE);
}

static const KindBitset BLOCK_RECOVERY = KB(TOKEN_K_DEF);

// Block(*) = '{'[0!] Statement+[*!E] '}'[?]
// Statement :=
//    ExprStmt
//  | LetStmt
//  | VarStmt
//  | WithStmt
//  | ReturnStmt
//  | BreakStmt
//  | ContinueStmt
//  | AssignStmt
static void parseBlock(Parser *p) {
    assert(at(p, TOKEN_LCURLY));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_LCURLY); // 0
    while (!at(p, TOKEN_RCURLY) && !at(p, TOKEN_EOF)) {
        switch (nth(p, 0)) {
            case TOKEN_K_LET:
                parseLetStmt(p); // *
                break;
            case TOKEN_K_VAR:
                parseVarStmt(p); // *
                break;
            case TOKEN_K_WITH:
                parseWithStmt(p); // *
                break;
            case TOKEN_K_RETURN:
                parseReturnStmt(p); // *
                break;
            case TOKEN_K_BREAK:
                parseBreakStmt(p); // *
                break;
            case TOKEN_K_CONTINUE:
                parseContinueStmt(p); // *
                break;
            default:
                if (at_any(p, EXPR_FIRST))
                    parseExprStmt(p); // *
                else {
                    if (at_any(p, BLOCK_RECOVERY))
                        break;
                    advanceWithError(p, "Expected a statement");
                }
        }
    }
    expect(p, TOKEN_RCURLY); // ?

    closeEvent(p, o, CST_BLOCK);
}

// LetStmt(5) = 'let'[0!] VarDef[1!] '='[2] Expr[3E] ';'[4]
static void parseLetStmt(Parser *p) {
    assert(at(p, TOKEN_K_LET));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_LET); // 0
    parseVarDef(p);         // 1
    if (at(p, TOKEN_EQUAL)) {
        expect(p, TOKEN_EQUAL); // 2
        parseExpr(p);           // 3
    } else {
        skip(p); // 2
        skip(p); // 3
    }
    expect(p, TOKEN_SEMI); // 4

    closeEvent(p, o, CST_LET_STMT);
}

// VarStmt(5) = 'var'[0!] VarDef[1!] '='[2] Expr[3E] ';'[4]
static void parseVarStmt(Parser *p) {
    assert(at(p, TOKEN_K_VAR));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_VAR); // 0
    parseVarDef(p);         // 1
    if (at(p, TOKEN_EQUAL)) {
        expect(p, TOKEN_EQUAL); // 2
        parseExpr(p);           // 3
    } else {
        skip(p); // 2
        skip(p); // 3
    }
    expect(p, TOKEN_SEMI); // 4

    closeEvent(p, o, CST_VAR_STMT);
}

// WithStmt(5) = 'with'[0!] VarDef[1!] '='[2] Expr[3E] ';'[4]
static void parseWithStmt(Parser *p) {
    assert(at(p, TOKEN_K_WITH));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_WITH); // 0
    parseVarDef(p);          // 1
    if (at(p, TOKEN_EQUAL)) {
        expect(p, TOKEN_EQUAL); // 2
        parseExpr(p);           // 3
    } else {
        skip(p); // 2
        skip(p); // 3
    }
    expect(p, TOKEN_SEMI); // 4

    closeEvent(p, o, CST_WITH_STMT);
}

// VarDef(3) = 'IDENT'[0] (':'[1] TypeExpr[2E])?
static void parseVarDef(Parser *p) {
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_IDENT);  // 0
    if (eat(p, TOKEN_COLON)) // 1
        parseTypeExpr(p);    // 2
    else
        skip(p); // 2

    closeEvent(p, o, CST_VAR_DEF);
}

// ReturnStmt(3) = 'return'[0!] Expr?[1E] ';'[2]
static void parseReturnStmt(Parser *p) {
    assert(at(p, TOKEN_K_RETURN));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_RETURN); // 0

    if (!at(p, TOKEN_SEMI) && !at(p, TOKEN_EOF))
        parseExpr(p); // 1
    else
        skip(p); // 1

    expect(p, TOKEN_SEMI); // 2

    closeEvent(p, o, CST_RETURN_STMT);
}

// BreakStmt(3) = 'break'[0!] Expr?[1E] ';'[2]
static void parseBreakStmt(Parser *p) {
    assert(at(p, TOKEN_K_BREAK));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_BREAK); // 0

    if (!at(p, TOKEN_SEMI) && !at(p, TOKEN_EOF))
        parseExpr(p); // 1
    else
        skip(p); // 1

    expect(p, TOKEN_SEMI); // 2

    closeEvent(p, o, CST_BREAK_STMT);
}

// ContinueStmt(2) = 'continue'[0!] ';'[1]
static void parseContinueStmt(Parser *p) {
    assert(at(p, TOKEN_K_CONTINUE));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_CONTINUE); // 0
    expect(p, TOKEN_SEMI);       // 1

    closeEvent(p, o, CST_CONTINUE_STMT);
}

// ExprStmt(2) =
//    BlocklessExpr[0E] ';'[1]
//  | BlockExpr[0E]
static void parseExprStmt(Parser *p) {
    OpenIndex o = openEvent(p);
    switch (nth(p, 0)) {
        case TOKEN_K_IF:
        case TOKEN_K_WHILE:
        case TOKEN_K_FOR:
        case TOKEN_K_LOOP:
            parseBlockExpr(p);
            skip(p);
            break;
        default:
            parseBlocklessExpr(p);
            expect(p, TOKEN_SEMI);
            break;
    }
    closeEvent(p, o, CST_EXPR_STMT);
}

// TypeExpr :=
//    BaseTypeExpr
//  | GenericParamName
//  | CustomTypeExpr
//  | FunctionTypeExpr
//  | TupleTypeExpr
// BaseTypeExpr(1) =
//    'i8'
//  | 'i16'
//  | 'i32'
//  | 'i64'
//  | 'u8'
//  | 'u16'
//  | 'u32'
//  | 'u64'
//  | 'str'
//  | 'char'
//  | 'bool'
static void parseTypeExpr(Parser *p) {
    switch (nth(p, 0)) {
        case TOKEN_K_I8:
        case TOKEN_K_I16:
        case TOKEN_K_I32:
        case TOKEN_K_I64:
        case TOKEN_K_U8:
        case TOKEN_K_U16:
        case TOKEN_K_U32:
        case TOKEN_K_U64:
        case TOKEN_K_STR:
        case TOKEN_K_CHAR:
        case TOKEN_K_BOOL: {
            OpenIndex o = openEvent(p);
            advance(p); // 0
            closeEvent(p, o, CST_BASE_TYPE_EXPR);
            break;
        }
        case TOKEN_PERCENT:
            parseGenericParamName(p);
            break;
        case TOKEN_IDENT:
            parseCustomTypeExpr(p);
            break;
        case TOKEN_K_FN:
            parseFunctionTypeExpr(p);
            break;
        case TOKEN_LPAREN:
            parseTupleTypeExpr(p);
            break;
        default:
            skipWithError(p, "Expected a type");
            return;
    }
}

// GenericParamName(2) = '%'[0!] 'IDENT'[1]
static void parseGenericParamName(Parser *p) {
    assert(at(p, TOKEN_PERCENT));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_PERCENT); // 0
    expect(p, TOKEN_IDENT);   // 1

    closeEvent(p, o, CST_GENERIC_PARAM_NAME);
}

// CustomTypeExpr(2) = 'IDENT'[0!] GenericArgList?[1]
static void parseCustomTypeExpr(Parser *p) {
    assert(at(p, TOKEN_IDENT));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_IDENT); // 0
    if (at(p, TOKEN_LBRACK))
        parseGenericArgList(p); // 1
    else
        skip(p); // 1

    closeEvent(p, o, CST_CUSTOM_TYPE_EXPR);
}

static const KindBitset GENERIC_ARG_LIST_RECOVERY = FN_PARAM_LIST_RECOVERY;

// GenericArgList(*) = '['[0!] TypeArg+[*!E] ']'[?]
static void parseGenericArgList(Parser *p) {
    assert(at(p, TOKEN_LBRACK));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_LBRACK); // 0
    while (!at(p, TOKEN_RBRACK) && !at(p, TOKEN_EOF)) {
        if (at_any(p, TYPE_EXPR_FIRST))
            parseTypeArg(p); // *
        else {
            if (at_any(p, GENERIC_ARG_LIST_RECOVERY))
                break;
            advanceWithError(p, "Expected a generic type parameter");
        }
    }
    expect(p, TOKEN_RBRACK); // ?

    closeEvent(p, o, CST_GENERIC_ARG_LIST);
}

// FunctionTypeExpr(5) = FunctionSpec[0!] TupleTypeExpr[1]
//                       ('->'[2] TypeExpr[3E])? FnModifierList?[4]
static void parseFunctionTypeExpr(Parser *p) {
    assert(at(p, TOKEN_K_FN));
    OpenIndex o = openEvent(p);

    parseFunctionSpec(p); // 0
    if (at(p, TOKEN_LPAREN))
        parseTupleTypeExpr(p); // 1
    else
        skip(p); // 1

    if (eat(p, TOKEN_ARROW)) // 2
        parseTypeExpr(p);    // 3
    else
        skip(p); // 3

    if (at(p, TOKEN_K_GIVEN))
        parseFnModifierList(p); // 4
    else
        skip(p); // 4

    closeEvent(p, o, CST_FUNCTION_TYPE_EXPR);
}

// FunctionSpec(5) = 'fn'[0!] ('['[1] '1'[2] ('+'[3] | '?'[3])? ']'[4])?
static void parseFunctionSpec(Parser *p) {
    assert(at(p, TOKEN_K_FN));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_FN); // 0
    if (at(p, TOKEN_LBRACK)) {
        expect(p, TOKEN_LBRACK);  // 1
        expect(p, TOKEN_DECIMAL); // 2
        if (at(p, TOKEN_PLUS) || at(p, TOKEN_QUESTION))
            advance(p); // 3
        else
            skip(p);             // 3
        expect(p, TOKEN_RBRACK); // 4
    } else {
        skip(p); // 1
        skip(p); // 2
        skip(p); // 3
        skip(p); // 4
    }

    closeEvent(p, o, CST_FUNCTION_SPEC);
}

// TupleTypeExpr(*) = '('[0!] TupleArg*[*!E] ')'[?]
static void parseTupleTypeExpr(Parser *p) {
    assert(at(p, TOKEN_LPAREN));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_LPAREN); // 0
    while (!at(p, TOKEN_RPAREN) && !at(p, TOKEN_EOF)) {
        parseTypeArg(p); // *
    }
    expect(p, TOKEN_RPAREN); // ?

    closeEvent(p, o, CST_TUPLE_TYPE_EXPR);
}

// TypeArg(2) = TypeExpr[0E] ','?[1]
static void parseTypeArg(Parser *p) {
    OpenIndex o = openEvent(p);

    parseTypeExpr(p); // 0
    if (!at(p, TOKEN_RPAREN))
        expect(p, TOKEN_COMMA); // 1
    else
        skip(p); // 1

    closeEvent(p, o, CST_TYPE_ARG);
}

// Expr := BlocklessExpr | BlockExpr
static void parseExpr(Parser *p) {
    switch (nth(p, 0)) {
        case TOKEN_K_IF:
        case TOKEN_K_WHILE:
        case TOKEN_K_FOR:
        case TOKEN_K_LOOP:
            parseBlockExpr(p);
            break;
        default:
            parseBlocklessExpr(p);
    }
}

// BlocklessExpr := SimpleExpr | AssignExpr
// AssignExpr(3) = SimpleExpr[0!E] AssignOp[1!] Expr[2!E]
// AssignOp := '=' | '+=' | '-=' | '*=' | '/=';
static void parseBlocklessExpr(Parser *p) {
    ClosedIndex c = parseSimpleExpr(p); // 0
    switch (nth(p, 0)) {
        case TOKEN_EQUAL:
        case TOKEN_PLUS_EQUAL:
        case TOKEN_MINUS_EQUAL:
        case TOKEN_STAR_EQUAL:
        case TOKEN_SLASH_EQUAL: {
            OpenIndex o = openBeforeEvent(p, c);
            advance(p);   // 1
            parseExpr(p); // 2
            closeEvent(p, o, CST_ASSIGN_EXPR);
            break;
        }
        default:
            break;
    }
}

// BlockExpr :=
//   IfExpr
// | WhileExpr
// | LoopExpr
// | ForExpr
static void parseBlockExpr(Parser *p) {
    switch (nth(p, 0)) {
        case TOKEN_K_IF:
            parseIfExpr(p);
            break;
        case TOKEN_K_WHILE:
            parseWhileExpr(p);
            break;
        case TOKEN_K_FOR:
            parseForExpr(p);
            break;
        case TOKEN_K_LOOP:
            parseLoopExpr(p);
            break;
        default:
            assert(0);
    }
}

// IfExpr(*) = IfClause[0!] ElseIfClause*[*] ElseClause?[?]
static void parseIfExpr(Parser *p) {
    assert(at(p, TOKEN_K_IF));
    OpenIndex o = openEvent(p);

    parseIfClause(p); // 0
    while (at(p, TOKEN_K_ELSE) && nth(p, 1) == TOKEN_K_IF) {
        parseElseIfClause(p); // *
    }
    if (at(p, TOKEN_K_ELSE))
        parseElseClause(p); // ?

    closeEvent(p, o, CST_IF_EXPR);
}

// IfClause(3) = 'if'[0] SimpleExpr[1!E] Block[2]
static void parseIfClause(Parser *p) {
    assert(at(p, TOKEN_K_IF));
    OpenIndex o = openEvent(p);

    expect(p, TOKEN_K_IF); // 0
    parseSimpleExpr(p);    // 1
    if (at(p, TOKEN_LCURLY))
        parseBlock(p); // 2
    else
        skip(p); // 2

    closeEvent(p, o, CST_IF_CLAUSE);
}
